k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-service-ingress
  labels:
    app: order-service
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          # Основной адрес нового задания:
          # http://arch.homework/user
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-service-ingress-rewrite
  labels:
    app: order-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          # Сохраняем маршрут из предыдущего домашнего задания:
          # /otusapp/alimzhan/health -> /health
          # /otusapp/alimzhan/user   -> /user
          - path: /otusapp/alimzhan(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 80
